# docker-flask

./: .gitignore
book_bank/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
book_bank/book_bank/: app.py
book_bank/frontend/: Dockerfile  package.json  webpack.config.js
book_bank/frontend/src/: index.html  index.tsx
book_bank/frontend/src/components/: app.tsx  root.tsx
book_bank/frontend/src/components/book_list/: books.css  books.tsx
book_bank/frontend/src/components/context/: actions.js  reducer.js  routes_util.js
book_bank/frontend/src/components/edit_book/: editbook.tsx
book_bank/frontend/src/components/greeting/: greeting.css  greeting.tsx
book_bank/frontend/src/components/homepage/: homepage.css  homepage.tsx
book_bank/frontend/src/components/post_book/: form_book.css  form_book_page.tsx
book_bank/frontend/src/components/user_ui/: user_form.tsx
book_bank/tests/: test_book_bank.py
docker_practice/: Dockerfile  docker-compose.yml
docker_practice/backend/: app.py
flask_practice/flaskr/: example.py
flask_practice/flaskvenv/: pyvenv.cfg
flask_practice_2/: pyproject.toml
flask_practice_2/flask_practice_2/: app.py
flask_practice_2/tests/: test_flask_practice_2.py
poetry_demo/: Dockerfile  pyproject.toml
poetry_demo/poetry_demo/: app.py
postgres-demo-docker/: Dockerfile  docker-compose.yml  pyproject.toml
postgres-demo-docker/postgres_demo_docker/: app.py
postgres-demo-docker/tests/: base.py  test_flask.py  test_postgres_demo_docker.py
random_app/: package.json
react_with_webpack/: package.json
(+11 files in other folders)
