[tool.poetry]
name = "flask_practice_2"
version = "0.1.0"
description = ""
authors = ["Christopher Lee <clee@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
